[package]
name = "android-book-rust"
version = "0.1.0"
authors = ["will <will@wrign.xyz>"]
edition = "2018"

# [build]
# target = "avr-atmega328p.json"

[features]
default = ["rt"]
rt = ["atmega328p-hal/rt"]
arduino-nano = ["atmega328p-hal/adc-pins"]

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "1.0.0"

[dependencies.atmega328p-hal]
git = "https://github.com/rahix/avr-hal"
rev = "885e8ec6d6d2fe34f26a1e2697a99f41092f0985"
features = ["atmega328p"]

[dependencies.arduino-uno]
path = "../avr-hal/boards/arduino-uno"

[dev-dependencies]
panic-halt = "0.2.0"
nb = "1.0.0"
ufmt = "0.1.0"
avr-device = "0.3"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"